export enum SensorType {
  Temperature = 'temperature'
}
